test/asm/sym-collision.err
warning: Purging a label "dork" [-Wpurge]
    at sym-collision.asm(20)
error: Interpolated symbol "dork" does not exist; it was purged
    at sym-collision.asm(25)
Assembly aborted with 1 error!
